--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 nav {
     display:flex;
     justify-content: space-evenly;
@@ -9,7 +13,8 @@ nav {
 
 nav a {
     color:white;
-    font-family: Arial
+    font-family: Arial;
+    text-decoration: none;
 }
 
 h1 {
@@ -50,6 +55,17 @@ button {
     width:130px;
     height:150px;
     margin-top:20px;
+}
+
+/* songlist */
 
 
 
+
+/* FOOTER */
+/* 
+footer .footer-wrap {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+} */
