--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@ nav {
 
 nav a {
     color:white;
-    font-family: Arial;
+    font-family: Roboto;
     text-decoration: none;
     text-transform: uppercase;
 
